Fixed horizontal scroll

--- a/my-work/number4/main.css
+++ b/my-work/number4/main.css
@@ -495,7 +495,7 @@ div#msg_no p {
 
 div.users-status {
   background: #fafafa;
-  width: 91vws;
+  width: 91vw;
   height: 100px;
   display: flex;
   align-items: center;
